intTests/test_parse_errors/parser004.log.good
 Loading file "parser004.saw"
 Stack trace:
   (builtin) (at top level)
Parse error at parser004.saw:2:22-2:24: Unexpected `in'

FAILED
